--- a/CuadaernoDiabetes.ipynb
+++ b/CuadaernoDiabetes.ipynb
@@ -647,6 +647,56 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "b62cec94-de91-446f-b2dd-ae6be9d95684",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Exactitud del modelo: 0.765\n",
+      "\n",
+      "Matriz de confusión:\n",
+      "[[115  17]\n",
+      " [ 30  38]]\n",
+      "\n",
+      "Reporte de clasificación:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "No diabética       0.79      0.87      0.83       132\n",
+      "   Diabética       0.69      0.56      0.62        68\n",
+      "\n",
+      "    accuracy                           0.77       200\n",
+      "   macro avg       0.74      0.72      0.72       200\n",
+      "weighted avg       0.76      0.77      0.76       200\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Evaluación del modelo ---\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+    "# Predicciones sobre el mismo conjunto (no recomendado)\n",
+    "y_pred = modelo.predict(X)\n",
+    "\n",
+    "# Exactitud\n",
+    "acc = accuracy_score(y, y_pred)\n",
+    "print(f\"✅ Exactitud del modelo: {acc:.3f}\")\n",
+    "\n",
+    "# Matriz de confusión\n",
+    "cm = confusion_matrix(y, y_pred)\n",
+    "print(\"\\nMatriz de confusión:\")\n",
+    "print(cm)\n",
+    "\n",
+    "# Reporte de clasificación\n",
+    "print(\"\\nReporte de clasificación:\")\n",
+    "print(classification_report(y, y_pred, target_names=[\"No diabética\", \"Diabética\"]))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "810e0235-0218-4195-b96f-4a78f4b5b0e6",
    "metadata": {},
    "outputs": [
@@ -677,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "938eef86-c6b6-49e2-b4a2-0209aaf3b250",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1151,7 @@
        "LogisticRegression(max_iter=1000)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1806333b-98d7-4333-b4da-43c85bb2aaf6",
    "metadata": {},
    "outputs": [
@@ -1135,7 +1185,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-11-11 13:00:22.995 \n",
+      "2025-11-11 15:33:03.172 \n",
       "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
       "  command:\n",
       "\n",
@@ -1154,7 +1204,7 @@
        " 'age': 35}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "cf7b5cdc-c336-4cf7-b5fa-ce226a1c8a5f",
    "metadata": {},
    "outputs": [],
@@ -1197,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "79f7e851-3f3c-4290-b984-9c78c9a3c0df",
    "metadata": {},
    "outputs": [],
@@ -1212,7 +1262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "a8a07bf0-bd1b-4b3c-be83-cff25fc24a61",
    "metadata": {},
    "outputs": [
@@ -1266,7 +1316,7 @@
        "0      2  100  70    20  25.0  0.5   35"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1277,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "6245b44d-ca71-4ca4-9322-52640d8fd7a2",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1337,7 @@
        "'No diabética'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "97a3fc86-8402-425f-bd5f-3e0213793bcf",
    "metadata": {},
    "outputs": [
@@ -1308,7 +1358,7 @@
        "0.09206579282945723"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
