--- a/Habito_Estudiantil_Desempeño_CRISP-DM.ipynb
+++ b/Habito_Estudiantil_Desempeño_CRISP-DM.ipynb
@@ -6595,7 +6595,6 @@
     "- famsize — Tamaño del hogar\n",
     "- Medu — Nivel educativo de la madre\n",
     "- Fedu — Nivel educativo del padre\n",
-    "- traveltime — Tiempo de viaje al colegio\n",
     "- studytime — Tiempo de estudio semanal\n",
     "- failures — Veces que repitió cursos\n",
     "- schoolsup — Apoyo académico del colegio\n",
@@ -6629,7 +6628,8 @@
     "\n",
     "❌ ocupación de los padres (puede introducir sesgos sociales)\n",
     "- Mjob\n",
-    "- Fjob"
+    "- Fjob\n",
+    "\n"
    ]
   },
   {
